# MIlestone-1

./: CMakeLists.txt  ConnectCommand.cpp  README.md  Sleep.cpp  asd.txt  main.cpp
Commands/: Command.cpp  Command.h  CommandCreator.cpp  CommandCreator.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  ElseCommand.cpp  ElseCommand.h  IfCommand.cpp  IfCommand.h  OpenDataServer.cpp  OpenDataServer.h  PrintCommand.cpp  PrintCommand.h  Sleep.cpp  Sleep.h  WhileCommand.cpp  WhileCommand.h
Connection/: client.cpp  client.h  server.cpp  server.h
Expressions/: Expression.cpp  Expression.h  Var.cpp  Var.h  ex1.cpp  ex1.h
Extra Methods/: Extra.cpp  Extra.h
Interpreter/: interpreter.cpp  interpreter.h
SymbolTable/: SymbolTable.cpp  SymbolTable.h
